# ift2008_tri_insertion

./: CMakeLists.txt  README.md  tri_insertion.cpp  tri_insertion.h
tests/: CMakeLists.txt  tests_tri_insertion.cpp
